--- a/src/index.html
+++ b/src/index.html
@@ -1359,7 +1359,7 @@
     <script src="node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
     <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
     <!-- Plugins and scripts required by this view-->
-	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>    
+	<script src="https://unpkg.com/@canvasjs/charts@3.7.13/canvasjs.min.js"></script>    
     <script src="js/main.js"></script>
   </body>
 </html>
