--- a/src/charts.html
+++ b/src/charts.html
@@ -730,7 +730,7 @@
     <script src="node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
     <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
     <!-- Plugins and scripts required by this view-->
-	<script src="https://unpkg.com/@canvasjs/charts@3.7.13/canvasjs.min.js"></script>    
+	<script src="node_modules/@canvasjs/charts/canvasjs.min.js"></script>    
     <script src="js/charts.js"></script>
   </body>
 </html>
